@@ -1,8 +1,8 @@
 Package: minqa
 Type: Package
 Title: Derivative-free optimization algorithms by quadratic approximation 
-Version: 1.1.7
-Date: 2010-06-09
+Version: 1.1.8
+Date: 2010-06-20
 Author: Douglas Bates, Katharine M. Mullen, John C. Nash, Ravi Varadhan
 Maintainer: Katharine M. Mullen <katharine.mullen@nist.gov>
 Description: Derivative-free optimization by quadratic approximation based
